--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,45 +1,13 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
-  min-height: 100vh;
+  min-height: 90vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  background-color: #0000;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
 
 .title {
   margin: 0;
@@ -47,101 +15,82 @@
   font-size: 4rem;
 }
 
+.title a {
+  color: #0070f3;
+  text-decoration: none;
+}
+
 .title,
 .description {
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.moodTitle{
+  width: 100%;
 }
 
 .grid {
   display: flex;
-   align-items: center;
+  align-items: center;
   justify-content: center;
+  text-align: center;
   flex-wrap: wrap;
-  max-width: 800px;
-
+  width: 80%;
+  flex-direction: column;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
+.moodGrid{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  color: inherit;
-  text-decoration: none;
-  border: 5px solid #eaeaea;
-  border-radius: 55px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width:90px;
+  flex-wrap: wrap;
+  width: 80%;
+  flex-direction: row;
+}
+.brandBox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .footer {
+  display: flex;
+  flex: 1;
+  padding: 1rem 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer a {
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  font-size: 12px;
+  font-weight: 500;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+} */
+
+
+/*smartphone(portrait)*/
+@media (min-width: 320px) and (max-width: 480px) {
 
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+/*tablet (landscape)*/
+@media(min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+/*desktop*/
+@media (min-width: 1025px) and (max-width: 1280px) {
+
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-  
-}
+/*big desktop*/
+@media (min-width: 1281px){
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
-}
-
-
-.cardGetorpost {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: center;
-  color: inherit;
-  text-decoration: none;
-  border: 5px solid #eaeaea;
-  border-radius: 55px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width:300px;
 }
