--- a/styles/GetorPost.module.css
+++ b/styles/GetorPost.module.css
@@ -1,9 +1,6 @@
 .container {
-  margin: 2rem;
-}
-
-.main {
-  min-height: 90vh;
+  margin: 0;
+  min-height: 100vh;
   min-width: 100vw;
   padding: 4rem 0;
   flex: 1;
@@ -16,8 +13,9 @@
 
 .question{
   font-size: 2.5rem;
+  padding: 0 20px;
+  text-align: center;
 }
-
 
 .grid {
   display: flex;
