--- a/styles/Get.module.css
+++ b/styles/Get.module.css
@@ -42,20 +42,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: 0.4s ease-out;
+  transition: 0.4s ease-in;
   background: white;
   box-shadow: 10px 7px 20px rgba(22, 12, 60, 0.2);
  }
  
-  .cardInfo {
-  width: 100%;
-  height: 100%;
-  color: #000000;
-  opacity: 0;
-  transform: translateY(20%);
-  transition: 0.5s;
-  text-align: center;
- }
+
  .cardImg {
   display: flex;
   flex-direction: column;
@@ -63,7 +55,7 @@
   align-items: center;
   width: 20%;
   height: 20%;
-  background: rgb(255, 151, 151);
+  background: rgb(32, 32, 32);
   margin: 0;
  }
 
