--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,13 +1,23 @@
 .main {
-  min-height: 90vh;
-  padding: 4rem 0;
+  margin: 0;
+  min-height: 80vh;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
+.wave {
+  width: 100%;
+  height: 100%;
+  animation-name: swell;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  fill: #85beff;
+}
 
 .title {
   margin: 0;
@@ -47,9 +57,13 @@
   flex-wrap: wrap;
   width: 80%;
   flex-direction: row;
+  gap: 5px;
 }
 .brandBox{
+  margin: 0;
+  min-height: 20vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -77,7 +91,19 @@
 
 /*smartphone(portrait)*/
 @media (min-width: 320px) and (max-width: 480px) {
-
+  .title {
+    margin: 0;
+    padding: 0px 20px;
+    line-height: 1.15;
+    font-size: 2.5rem;
+  }
+  
+  .main{
+    padding: 0px 20px;
+  }
+  .brandBox{
+    min-height: 30vh;
+  }
 }
 
 /*tablet (landscape)*/
